project-2/examples/bad/wrong_type.lg
int f(int x) {
    return x;
}

int main() {
    string s = "abc";
    print(f(s)); // compile error

    return 0;
}
